# turtle-cpu

./: .gitignore  .gitmodules  pyproject.toml  turtle-cpu_export.tcl
docs/: turtle_cpu_uarch.md
scripts/vivado/: clean_generated.sh  export_project.tcl  lint.tcl
src/alu/: Makefile  lec.eqy  synth.ys
src/alu/rtl/: alu.sv  alu_gates.sv  alu_pkg.sv
src/alu/tb/: alu_tb.sv
src/clk_rst_gen/: Makefile
src/clk_rst_gen/rtl/: clk_rst_gen.sv
src/clk_rst_gen/tb/: clk_rst_gen_tb.sv
src/common/rtl/: tristate_driver.sv
src/data_memory/: Makefile
src/data_memory/rtl/: data_memory.sv
src/data_memory/tb/: data_memory_tb.sv
src/decoder/: Makefile
src/decoder/rtl/: decoder.sv  decoder_pkg.sv
src/decoder/tb/: decoder_tb.sv
src/instruction_memory/: Makefile  count_255.txt
src/instruction_memory/rtl/: instruction_memory.sv
src/instruction_memory/tb/: instruction_memory_tb.sv
src/program_counter/: Makefile
src/program_counter/rtl/: program_counter.sv  program_counter_pkg.sv
src/program_counter/tb/: program_counter_tb.sv
src/register_file/: Makefile
src/register_file/rtl/: register_file.sv  register_file_pkg.sv
src/register_file/tb/: register_file_tb.sv
src/turtle_cpu_top/: Makefile  final_register_file.mem  final_register_file.txt  initial_instruction_memory.txt
src/turtle_cpu_top/rtl/: turtle_cpu_core.sv  turtle_cpu_subsystem.sv  turtle_cpu_top.sv
src/turtle_cpu_top/tb/: turtle_cpu_top_tb.sv
src/wrapper_fpga_basys3/: Makefile
tests/: Makefile  README.md  __init__.py
tests/integration/: __init__.py  test_framework.py
(+47 files in other folders)
