[tool.poetry]
name = "turtle-cpu"
version = "0.1.0"
description = "Turtle CPU RTL Implementation and Testing Framework"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
turtle-toolkit = {path = "./turtle-toolkit", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"
flake8 = "^6.0"

[tool.poetry.scripts]
turtle-test = "tests.integration.test_framework:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
